# Default_Project

./: .pre-commit-config.yaml  Makefile  README.md  environment.yaml  main.py  pre_commit_test.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug-issue-template.md  feature-request-template.md
.github/workflow/: pull-request.yml  python.yml
src/: main.py
src/default_project/: main.py
