[project]
name = "Default_Project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "WOOSHIK-M", email = "wooshik.m@gmail.com"},
]
dependencies = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "pre-commit>=3.6.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
